Changed media rules to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     background-color: rgb(255,255,255); 
 	background-color: rgba(255, 255, 255, 0.8);
     margin: 1%;
-    padding: 1em;
+    padding: 2%;
     border-radius: 1.75em;
 }
 
@@ -143,18 +143,24 @@ div.citation {
     
     section {
         width: 95%;
+        margin-top: 2%;
         margin-left: auto;
         margin-right: auto;
+        float: none;
     }
     
     aside {
         width: 95%;
         margin-left: auto;
         margin-right: auto;
+        float: none;
     }
     
     .page-footer {
-        padding: 4%;
+        padding: 3%;
+        margin-left: auto;
+        margin-right: auto;
+        float: none;
     }
 
 }
